jilles      2007/03/23 21:45:12 UTC	(20070323-7973)
  Log:
  - Move mode_sts() protocol module function from
    channel names to channel_t pointers.
  - Use TMODE in TS6; use FMODE in inspircd11.
  

  Changes:	Modified:
  +2 -2		trunk/include/phandler.h (File Modified) 
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 
  +5 -6		trunk/modules/protocol/asuka.c (File Modified) 
  +3 -5		trunk/modules/protocol/bahamut.c (File Modified) 
  +5 -6		trunk/modules/protocol/bircd.c (File Modified) 
  +7 -3		trunk/modules/protocol/charybdis.c (File Modified) 
  +2 -2		trunk/modules/protocol/dreamforge.c (File Modified) 
  +7 -3		trunk/modules/protocol/hybrid.c (File Modified) 
  +2 -2		trunk/modules/protocol/hyperion.c (File Modified) 
  +2 -2		trunk/modules/protocol/inspircd10.c (File Modified) 
  +2 -2		trunk/modules/protocol/inspircd11.c (File Modified) 
  +2 -2		trunk/modules/protocol/ircnet.c (File Modified) 
  +5 -6		trunk/modules/protocol/nefarious.c (File Modified) 
  +2 -2		trunk/modules/protocol/officeirc.c (File Modified) 
  +2 -2		trunk/modules/protocol/plexus.c (File Modified) 
  +2 -2		trunk/modules/protocol/ptlink.c (File Modified) 
  +7 -3		trunk/modules/protocol/ratbox.c (File Modified) 
  +2 -2		trunk/modules/protocol/shadowircd.c (File Modified) 
  +3 -5		trunk/modules/protocol/solidircd.c (File Modified) 
  +2 -2		trunk/modules/protocol/sorcery.c (File Modified) 
  +3 -5		trunk/modules/protocol/ultimate3.c (File Modified) 
  +5 -6		trunk/modules/protocol/undernet.c (File Modified) 
  +2 -2		trunk/modules/protocol/unreal.c (File Modified) 
  +1 -1		trunk/src/cmode.c (File Modified) 
  +2 -2		trunk/src/phandler.c (File Modified) 
  +2 -2		trunk/src/services.c (File Modified) 


jilles      2007/03/23 19:46:47 UTC	(20070323-7971)
  Log:
  TS6: fix topicts when TB is used to set a topic (was set to
  something in 2038).
  

  Changes:	Modified:
  +1 -1		trunk/modules/protocol/charybdis.c (File Modified) 